creado darAlta.html

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -10,7 +10,7 @@
 <ul>
     <li><a href="darAlta.html">Dar de alta una tarjeta.</a></li>
     <li><a href="ampliarCupo.html">Ampliar el límite de la tarjeta.</a></li>
-    <li><a href="realizarPago">Realizar pago con tarjeta de crédito.</a></li>
+    <li><a href="realizarPago.html">Realizar pago con tarjeta de crédito.</a></li>
  </ul>
 </body>
 </html>
