--- a/WebContent/darAlta.html
+++ b/WebContent/darAlta.html
@@ -22,10 +22,10 @@
         <label for="tipoV">Visa</label> <input type="radio" name="tipo" id="tipoV" value="tipoV"/>
         <label for="tipoM">MasterCard</label> <input type="radio" name="tipo" id="tipoM" value="tipoM"/><br/>
          <br/>
-   <label for="numeroComprobacion">Núm. comprobación :</label>
+   <label for="numeroComprobacion">Código de verificación :</label>
         <input type="number" name="numeroComprobacion" id="numeroComprobacion"/><br/>
         <br/>
-   <label for="contrasenha">Contraseña        :</label>
+   <label for="contrasenha">Password/Contraseña :</label>
         <input type="text" name="contrasenha" id="contrasenha" /><br/>
         <br/>
    <input class="botones" type="submit" name="enviar" id="enviar" value="Enviar"/>
