creada vistaMensaje.jsp

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -9,8 +9,11 @@
 <h1>Gestor de Tarjetas de Crédito del Banco</h1><br/>
 <ul>
     <li><a href="darAlta.html">Dar de alta una tarjeta.</a></li>
-    <li><a href="ampliarCupo.html">Ampliar el límite de la tarjeta.</a></li>
+    <br></br>
+    <li><a href="ampliarCupo.html">Consultar tarjeta (Podrá ampliar el límite de la tarjeta).</a></li>
+    <br></br>
     <li><a href="realizarPago.html">Realizar pago con tarjeta de crédito.</a></li>
+    <br></br>
  </ul>
 </body>
 </html>
