--- a/WebContent/ampliarCupo.html
+++ b/WebContent/ampliarCupo.html
@@ -7,7 +7,7 @@
 </head>
 <body>
    <form method="get" action="DarAlta" name="darAlta" id="darAlta">
-   <h1>Opción del menú para ampliar el cupo de una tarjeta de crédito.</h1> 
+   <h1>Opción consulta previa para ampliar el cupo de una tarjeta de crédito.</h1> 
    <br/><br/>
    <label for="numero">Número de la T.C. :</label> 
         <input type="text" name="numero" id="numero"  required="required" maxlength="12" /><br/>
