funciona alta, consulta por ID y actualizar cupo disponible

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -10,7 +10,7 @@
 <ul>
     <li><a href="darAlta.html">Dar de alta una tarjeta.</a></li>
     <br></br>
-    <li><a href="ampliarCupo.html">Consultar tarjeta (Podrá ampliar el límite de la tarjeta).</a></li>
+    <li><a href="consultarUno.html">Consultar tarjeta (Podrá ampliar el límite de la tarjeta).</a></li>
     <br></br>
     <li><a href="realizarPago.html">Realizar pago con tarjeta de crédito.</a></li>
     <br></br>
