--- a/WebContent/darAlta.html
+++ b/WebContent/darAlta.html
@@ -13,17 +13,17 @@
         <input type="text" name="numero" id="numero"  required="required" maxlength="12" /><br/>
         <br/>
    <label for="cupoMaximo">Cupo Máximo       :</label>
-        <input type="text" name="cupoMaximo" id="cupoMaximo" min="100" max="1000" value="100" required="required" step="50"/><br/>
+        <input type="number" name="cupoMaximo" id="cupoMaximo" min="100" max="1000" value="100" required="required" step="50"/><br/>
         <br/>
    <label for="cupoDisponible">Cupo Disponible   :</label>
-        <input type="text" name="cupoDisponible" id="cupoDisponible" /><br/>
+        <input type="number" name="cupoDisponible" id="cupoDisponible" /><br/>
         <br/>
    <label for="tipo">Tipo              :</label>
-        <label for="tipoV">Visa</label> <input type="radio" name="tipo" id="tipoV" value="tipoV"/>
+        <label for="tipoV">Visa</label> <input type="radio" name="tipo" id="tipoV" value="tipoV" checked="checked"/>
         <label for="tipoM">MasterCard</label> <input type="radio" name="tipo" id="tipoM" value="tipoM"/><br/>
          <br/>
    <label for="numeroComprobacion">Código de verificación :</label>
-        <input type="number" name="numeroComprobacion" id="numeroComprobacion"/><br/>
+        <input type="text" name="numeroComprobacion" id="numeroComprobacion"/><br/>
         <br/>
    <label for="contrasenha">Password/Contraseña :</label>
         <input type="text" name="contrasenha" id="contrasenha" /><br/>
