inicio codigo para pago con tarjeta

--- a/WebContent/ampliarCupo.html
+++ b/WebContent/ampliarCupo.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" type="text/css" href="css/estilo.css"/>
 </head>
 <body>
-   <form method="get" action="DarAlta" name="darAlta" id="darAlta">
+   <form method="get" action="RealizarPago" name="RealizarPago" id="RealizarPago">
    <h1>Opción consulta previa para ampliar el cupo de una tarjeta de crédito.</h1> 
    <br/><br/>
    <label for="numero">Número de la T.C. :</label> 
