--- a/WebContent/darAlta.html
+++ b/WebContent/darAlta.html
@@ -31,6 +31,7 @@
    <input class="botones" type="submit" name="enviar" id="enviar" value="Enviar"/>
  
 </form>
- 
+  <br/><br/>
+  <p><a href="index.html"  >Ir a Inicio</a></p> 
 </body>
 </html>
