--- a/WebContent/realizarPago.html
+++ b/WebContent/realizarPago.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" type="text/css" href="css/estilo.css"/>
 </head>
 <body>
-   <form method="get" action="realizarPago" name="realizarPago" id="realizarPago">
+   <form method="get" action="RealizarPago" name="RealizarPago" id="RealizarPago">
    <h1>Opción del menú para realizar un pago con una tarjeta de crédito.</h1> 
    <br/><br/>
    <label for="numero">Número de la T.C. :</label> 
@@ -24,6 +24,7 @@
    <input class="botones" type="submit" name="enviar" id="enviar" value="Enviar"/>
  
 </form>
- 
+  <br/><br/>
+  <p><a href="index.html"  >Ir a Inicio</a></p> 
 </body>
 </html>
