pendiente pago con tarjeta

--- a/WebContent/realizarPago.html
+++ b/WebContent/realizarPago.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" type="text/css" href="css/estilo.css"/>
 </head>
 <body>
-   <form method="get" action="RealizarPago" name="RealizarPago" id="RealizarPago">
+   <form method="get" action="RealizarPago" name="realizarPago" id="realizarPago">
    <h1>Opción del menú para realizar un pago con una tarjeta de crédito.</h1> 
    <br/><br/>
    <label for="numero">Número de la T.C. :</label> 
