pendiente pom.xml y codigo para consultar la tarjeta por número, comparar los datos tecleados en realizarPago.html con los del registro recuperado y ver si el saldo es mayor o igual al valor de la compra y si el cupo es mayor o igual a la compra

--- a/WebContent/darAlta.html
+++ b/WebContent/darAlta.html
@@ -13,7 +13,7 @@
         <input type="text" name="numero" id="numero"  required="required" maxlength="12" /><br/>
         <br/>
    <label for="cupoMaximo">Cupo Máximo       :</label>
-        <input type="number" name="cupoMaximo" id="cupoMaximo" min="100" max="1000" value="100" required="required" step="50"/><br/>
+        <input type="number" name="cupoMaximo" id="cupoMaximo" required="required"/><br/>
         <br/>
    <label for="cupoDisponible">Cupo Disponible   :</label>
         <input type="number" name="cupoDisponible" id="cupoDisponible" /><br/>
